src/objects/Subscription_Change__c.object
<CustomObject>
    <description>Object is used for storing future changes to Subscriptions which can&apos;t be processed immediately (e.g. Renewal has fewer seats than the original Subscription</description>
    <fields>
        <fullName>Delinian_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Delinian Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Delta_No_Of_Seats__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delta Number Of Seats?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats__c</fullName>
        <label>Number of Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscription Changes</relationshipLabel>
        <relationshipName>Subscription_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for capturing Order Product information on subscriptions. Once multiple products will be added to a single subscritpion this needs to be revisited.</description>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Subscription Changes</relationshipLabel>
        <relationshipName>Subscription_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>last order that made effect on the subscription</description>
        <inlineHelpText>last order that made effect on the subscription</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Subscription Changes</relationshipLabel>
        <relationshipName>Subscription_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                    <isActive>false</isActive>
                    <label>Applied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <description>Subscription to which the change is applied to.</description>
        <inlineHelpText>Subscription to which the change is applied to.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscription Changes</relationshipLabel>
        <relationshipName>Subscription_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Subscription Change</label>
    <nameField>
        <label>CODE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>